<resources>
    <string name="app_name">Monitor</string>
    <string name="settings">Settings</string>
    <string name="slide_show">Slide show</string>
    <string name="add_camera">Add new camera</string>
    <string name="add_camera_">Add camera</string>
    <string name="click_to_add">Click to add</string>
    <string name="auto_preview">Auto preview</string>
    <string name="slide_show_interval">Slide show interval</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="init_sdk_init_error">Error starting HCNetSDK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_occurred">An error occurred while processing</string>
    <string name="cameras">Cameras</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="details">Detials</string>
    <string name="some_error">Some error</string>
    <string name="empty_field">Empty field</string>
    <string name="share_url">\"Share camera URL\"</string>
    <string name="delete_camera">Delete camera</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this device ?</string>
    <string name="cam_details">Camera details</string>
    <string name="ok">ok</string>
    <string name="grid_count">Grid count</string>
    <string name="live_cameras">Monitor</string>
    <string name="cancel">Cancel</string>
    <string name="cameras_limit">Only 32 cameras are allowed </string>
    <string name="no_cameras_added_yet">No cameras added yet</string>
    <string name="capture_photo">Capture photo</string>
    <string name="record_video">Capture video</string>
    <string name="edit_camera">Edit camera</string>
    <string name="auto_slide_show">Auto slide show</string>
    <string name="save_to">Saved media folder</string>
    <string name="show_media">Show saved media</string>
    <string name="no_photos">No photos yet</string>
    <string name="photos">Saved media</string>
    <string name="stop">Stop</string>
    <string name="record_saved">Video recorded successfully</string>
    <string name="record_failed">Record failed</string>
    <string name="cant_take_photo">Can\'t take snapshot</string>
    <string name="cant_rec_video">Can\'t record a video</string>
    <string name="snapshot_taken">Snapshot taken successfully</string>
    <string name="internal_storage">Internal storage</string>
    <string name="sd_card">SDCard</string>
    <string name="usb">USB</string>
    <string name="media_storage_ready">Media storage is ready</string>
    <string name="media_ejected">Media ejected</string>
    <string name="select_all">Select all</string>
    <string name="location">Location</string>
    <string name="size">Size</string>
    <string name="media_details">Details</string>
    <string name="deleting">Deleting</string>
    <string name="file_delete_error">"Delete error : "</string>
    <string name="no_media_yet">You don\'t have any media saved</string>
    <string name="card">card</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="monitor">Monitor</string>
    <string name="camera_monitor">Camera monitor</string>
    <string name="saved_media">Saved media</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="camera_name">Camera name</string>
    <string name="camera_info">Camera info</string>
    <string name="add_first_cam">Add your first cam</string>
    <string name="add">Add</string>
    <string name="seconds">seconds</string>
    <string name="seconds_formated">%d seconds</string>
    <string name="devices">Devices</string>
    <string name="login_failed">Login failed</string>
    <string name="device_info">Device info</string>
    <string name="add_device">Add device</string>
    <string name="ip_address">ip address</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="invalid_ip">Invalid ip address</string>
    <string name="invalid_url">Invalid url</string>
    <string name="device_list">Device list</string>
    <string name="no_devices">No devices added yet</string>
    <string name="update">Update</string>
    <string name="Cant_LOGIN">Can\'t connect with this device</string>
    <string name="Take_Picture">Picture captured successfully</string>
    <string name="error_streaming">Error Streaming</string>
    <string name="device_deleted">Device deleted successfully</string>
    <string name="save">Save</string>
    <string name="device_type">Device type</string>
    <string name="device_created">Device created successfully</string>
    <string name="device_updated">Device updated successfully</string>
    <string name="one_or_more_invalid_fields">One or more invalid fields</string>
    <string name="wrong_device_type">Wrong device type</string>
    <string name="domain">Domain</string>
    <string name="channels">Channels : </string>
    <string name="wrong_user_password">\tusername or password is incorrect. The username or password entered during registration is wrong.</string>
    <string name="network_error">Failed to connect to device. The device is offline or the connection timeout caused by network reasons, etc.</string>
    <string name="max_users">\tThe number of users logged into the device has reached the maximum.</string>
    <string name="error_title">Error</string>


</resources>