<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/domain_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/materialTextInputStyle"
            android:layout_marginVertical="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:hint="@string/domain">
        <com.xontel.surveillancecameras.utils.IpField
            android:id="@+id/et_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            style="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/materialTextInputStyle"
           
           
            app:boxStrokeWidth="0dp"
            android:layout_marginVertical="8dp"
            app:boxStrokeWidthFocused="0dp"
            android:hint="@string/username">
        <com.xontel.surveillancecameras.utils.NormalTextField
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            style="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/materialTextInputStyle"
            app:endIconMode="password_toggle"
            app:boxStrokeWidth="0dp"
            android:layout_marginVertical="8dp"
            app:boxStrokeWidthFocused="0dp"
            android:hint="@string/password">
        <com.xontel.surveillancecameras.utils.NormalTextField
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            style="@style/editTextStyle"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:theme="@style/materialTextInputStyle"
           android:visibility="gone"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:hint="@string/description">
        <com.xontel.surveillancecameras.utils.NormalTextField
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            style="@style/editTextStyle"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="4"
            />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</layout>