<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/no_devices"
        layout="@layout/no_devices"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/item_add"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:background="@color/edit_text_color"
                android:textSize="20dp"
                android:layout_toEndOf="@id/iv_cam"
                android:layout_alignParentTop="true"
                android:textColor="@color/black"
                android:text="@string/device_list"/>
        <com.xontel.surveillancecameras.utils.DevicesList
            android:id="@+id/rv_devices"
            android:layout_width="match_parent"
            tools:listitem="@layout/item_device"
            android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="24dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="8dp"
                        style="@style/settingsLabel"
                        android:text="@string/device_info" />
                    <include
                        android:id="@+id/drop_down"
                        layout="@layout/drop_down"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/materialTextInputStyle"
                    android:layout_marginVertical="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:hint="@string/name">
                    <com.xontel.surveillancecameras.utils.NormalTextField
                        android:id="@+id/et_name"
                        style="@style/editTextStyle"
                        android:maxLength="20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <include
                    android:id="@+id/cam_fields"
                    layout="@layout/cam_fields"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <include
                    android:id="@+id/device_fields"
                    layout="@layout/device_fields"

                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginVertical="8dp"
                    android:orientation="horizontal">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_cancel"
                        android:layout_width="150dp"
                        android:layout_height="80dp"
                        android:text="@string/cancel"
                        app:background="@color/white"
                        app:backgroundTint="@color/white"
                        android:stateListAnimator="@null"
                        app:cornerRadius="5dp"
                        android:layout_marginHorizontal="16dp"
                        android:textAllCaps="false"
                        android:textColor="@color/primary_color"
                        android:textSize="17dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save"
                        android:layout_width="150dp"
                        android:layout_height="80dp"
                        android:text="@string/add"
                        app:backgroundTint="@color/primary_color"
                        app:cornerRadius="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17dp" />
                </LinearLayout>


            </LinearLayout>

    </LinearLayout>
</FrameLayout>
</layout>